Upon Prev/Next session, only activate new session when session.count > 1.

Will forward port when I get trunk/kdebase compiling again...

BUG: 107197

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=550095